--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,25 +1,26 @@
 window {
-    background-color: #7C818C;
+    background-color: #aaaaaa;
 }
 
 #outer-box {
     margin: 2px;
-    padding: 10px;
-    background-color: #24283B;
+    padding: 8px;
+    background-color: #3d3d3d;
 }
 
 #input {
-    font-size: 16px;
+    font-size: 17px;
     margin-top: 4px;
     margin-bottom: 10px;
     border: none;
-    background-color: #383C4A;
+    background-color: #222222;
 }
 
 #text {
-    font-size: 16px;
+    font-size: 17px;
+    color: #ffffff;
 }
 
 #entry:selected {
-    background-color: #33467C;
+    background-color: #111111;
 }
